--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header class="header">
 			<div class="header__container container">
 				<a href="#" class="header__logo"
-					><img src="/img/logo.svg" alt="Logo"
+					><img src="./img/logo.svg" alt="Logo"
 				/></a>
 				<nav class="header__nav">
 					<ul class="nav__list">
@@ -64,7 +64,7 @@
 			<div class="services__container container">
 				<div class="services_row">
 					<div class="services__column1">
-						<img src="/img/services-1.png" alt="" class="services__image" />
+						<img src="./img/services-1.png" alt="" class="services__image" />
 					</div>
 					<div class="services__column2">
 						<h1 class="services__tittle">Помогаем увеличить прибыль</h1>
@@ -77,7 +77,7 @@
 				</div>
 				<div class="services_row services__row-reverse">
 					<div class="services__column1">
-						<img src="/img/services-2.png" alt="" class="services__image" />
+						<img src="./img/services-2.png" alt="" class="services__image" />
 					</div>
 					<div class="services__column2">
 						<h1 class="services__tittle">Приумножаем ваши ресурсы</h1>
@@ -92,7 +92,7 @@
 				</div>
 				<div class="services_row">
 					<div class="services__column1">
-						<img src="/img/services-3.png" alt="" class="services__image" />
+						<img src="./img/services-3.png" alt="" class="services__image" />
 					</div>
 					<div class="services__column2">
 						<h1 class="services__tittle">Настраиваем письма под ваши задачи</h1>
@@ -106,7 +106,7 @@
 				</div>
 				<div class="services_row services__row-reverse">
 					<div class="services__column1">
-						<img src="/img/services-4.png" alt="" class="services__image" />
+						<img src="./img/services-4.png" alt="" class="services__image" />
 					</div>
 					<div class="services__column2">
 						<h1 class="services__tittle">
